<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/about" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout" />
</menu>