<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <!-- Updated Header with title and menu -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/headercolor"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_header"
                android:padding="8dp"
                android:contentDescription="Back"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_header_menu"
                android:padding="16dp"
                android:contentDescription="Menu"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_and_theme"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorSecondary"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/settings_card_background"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="150dp"
                        android:contentDescription="Light Mode Image"
                        android:src="@drawable/ic_light" />

                    <RadioButton
                        android:id="@+id/radio_light_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/light_mode"
                        android:textColor="@color/black_remain" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="150dp"
                        android:contentDescription="Dark Mode Image"
                        android:src="@drawable/ic_dark" />

                    <RadioButton
                        android:id="@+id/radio_dark_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/dark_mode"
                        android:textColor="@color/black_remain" />
                </LinearLayout>
            </LinearLayout>

            <!-- About Device Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_device"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorSecondary"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/settings_card_background"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginBottom="0dp"
                    android:paddingStart="0dp"
                    android:text="@string/osteo_vision"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_version"
                    android:textSize="14sp"
                    android:textColor="@color/black_remain"
                    android:paddingStart="0dp"
                    android:layout_marginBottom="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_description"
                    android:textSize="14sp"
                    android:textColor="@color/black_remain"
                    android:paddingStart="0dp" />
            </LinearLayout>

            <!-- No title section with two equally divided blocks -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@drawable/settings_card_background"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_pen"
                        android:contentDescription="Subject icon"
                        android:layout_gravity="start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subject"
                        android:textColor="@color/black_remain"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_subject_desc"
                        android:textColor="@color/black_remain"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@drawable/settings_card_background">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_university"
                        android:contentDescription="WLU icon"
                        android:layout_gravity="start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/institution"
                        android:textColor="@color/black_remain"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wilfrid_laurier_university"
                        android:textColor="@color/black_remain"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>